--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/passport": "~4.0",
+        "laravel/tinker": "~1.0",
+        "league/oauth2-server": "^6.0",
+        "paragonie/random_compat": "^2.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
